--- a/docs/api/qiskit/qiskit.transpiler.passes.synthesis.hls_plugins.FullAdderSynthesisV95.mdx
+++ b/docs/api/qiskit/qiskit.transpiler.passes.synthesis.hls_plugins.FullAdderSynthesisV95.mdx
@@ -8,14 +8,14 @@ python_api_name: qiskit.transpiler.passes.synthesis.hls_plugins.FullAdderSynthes
 
 # FullAdderSynthesisV95
 
-<Class id="qiskit.transpiler.passes.synthesis.hls_plugins.FullAdderSynthesisV95" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/transpiler/passes/synthesis/hls_plugins.py#L1405-L1429" signature="qiskit.transpiler.passes.synthesis.hls_plugins.FullAdderSynthesisV95" modifiers="class">
+<Class id="qiskit.transpiler.passes.synthesis.hls_plugins.FullAdderSynthesisV95" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/transpiler/passes/synthesis/hls_plugins.py#L1472-L1496" signature="qiskit.transpiler.passes.synthesis.hls_plugins.FullAdderSynthesisV95" modifiers="class">
   Bases: [`HighLevelSynthesisPlugin`](qiskit.transpiler.passes.synthesis.plugin.HighLevelSynthesisPlugin "qiskit.transpiler.passes.synthesis.plugin.HighLevelSynthesisPlugin")
 
   A ripple-carry adder with a carry-in and a carry-out bit.
 
   This plugin name is:`FullAdder.ripple_v95` which can be used as the key on an [`HLSConfig`](qiskit.transpiler.passes.HLSConfig "qiskit.transpiler.passes.HLSConfig") object to use this method with [`HighLevelSynthesis`](qiskit.transpiler.passes.HighLevelSynthesis "qiskit.transpiler.passes.HighLevelSynthesis").
 
-  For an adder on 2 registers with $n$ qubits each, this plugin requires at least $n-1$ clean auxiliary qubit.
+  For an adder on 2 registers with $n$ qubits each, this plugin requires at least $n-1$ clean auxiliary qubits.
 
   The plugin supports the following plugin-specific options:
 
@@ -25,7 +25,7 @@ python_api_name: qiskit.transpiler.passes.synthesis.hls_plugins.FullAdderSynthes
 
   ### run
 
-  <Function id="qiskit.transpiler.passes.synthesis.hls_plugins.FullAdderSynthesisV95.run" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/transpiler/passes/synthesis/hls_plugins.py#L1419-L1429" signature="run(high_level_object, coupling_map=None, target=None, qubits=None, **options)">
+  <Function id="qiskit.transpiler.passes.synthesis.hls_plugins.FullAdderSynthesisV95.run" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/transpiler/passes/synthesis/hls_plugins.py#L1486-L1496" signature="run(high_level_object, coupling_map=None, target=None, qubits=None, **options)">
     Run synthesis for the given Operation.
 
     **Parameters**
