--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -5,7 +5,7 @@ description: The latest updates from Qiskit and IBM Quantum, including the lates
 
 # Latest updates
 
-*Last updated 4 December 2024*
+*Last updated 17 December 2024*
 {/* remember to update the date in the previous line each time this page is updated!!! */}
 
 Keep up with the latest and greatest from Qiskit and IBM Quantum&trade;! Gathered here are the the most recent Qiskit package release summaries, documentation updates, blogs, community events, and more.
@@ -146,50 +146,55 @@ IBM Quantum documentation recently added a number of user-facing improvements, i
 
 **New pages**
 
-New pages include documentation for [Qiskit Functions](/guides/functions), [Qiskit addons](/guides/addons), and [Qiskit Code Assistant](/guides/qiskit-code-assistant), as well as a guide about [job limits](/guides/job-limits). 
+Visit the newest content in the documentation!
 
-- Qiskit Functions [Introduction](/guides/functions)
-- [IBM&reg; Circuit function](/guides/ibm-circuit-function)
-- [Algorithmiq TEM function](/guides/algorithmiq-tem)
-- [Q-CTRL Performance Management](/guides/q-ctrl-performance-management)
-- [Qedma QESEM](/guides/qedma-qesem)
-- [Q-CTRL Optimization Solver](/guides/q-ctrl-optimization-solver)
-- [QunaSys QURI Chemistry](/guides/qunasys-quri-chemistry)
-- Qiskit Code Assistant [Overview](/guides/qiskit-code-assistant)
-- [Use Qiskit Code Assistant in JupyterLab](/guides/qiskit-code-assistant-jupyterlab)
-- [Use Qiskit Code Assistant in Visual Studio Code](/guides/qiskit-code-assistant-vscode)
+- Introductory and get-started material for these [Qiskit addons](/guides/addons): 
+  - [Sample-based quantum diagonalization (SQD)](/guides/qiskit-addons-sqd)
+  - [Approximate quantum compiler with tensor networks (AQC-Tensor)](/guides/qiskit-addons-aqc)
+  - [Operator backpropagation (OBP)](/guides/qiskit-addons-obp)
+  - [Multi-product formulas (MPF)](/guides/qiskit-addons-mpf)
+
+- [Debug Qiskit Runtime jobs](/guides/debug-qiskit-runtime-jobs) with the NEAT class
+
+- [Integrate external quantum resources with Qiskit](/open-source/create-a-provider) guide in Open-source resources
+
+- New migration guide: [Migrate from Qiskit Pulse to fractional gates](/migration-guides/pulse-migration)
+
+- New Qiskit function guide: [Singularity Machine Learning - Classification](/guides/multiverse-computing-singularity)
+
+- [Use Qiskit Code Assistant in local mode](/guides/qiskit-code-assistant-local)
 
 **Content additions and improvements**
 
-- Added content to the [Execution modes](/guides/execution-modes) guides and improved explanatory content in the [Introduction to primitives](/guides/primitives) page
+    - Added content to the [Execution modes](/guides/execution-modes) guides and improved explanatory content in the [Introduction to primitives](/guides/primitives) page
 
-- Clarified how the [Estimator primitive calculates error](/guides/primitive-input-output#how-the-estimator-calculates-error)
+    - Clarified how the [Estimator primitive calculates error](/guides/primitive-input-output#how-the-estimator-calculates-error)
 
-- A new [FAQ](/faq) page
+    - A new [FAQ](/faq) page
 
-- Improvements to the [Support](/support) page
+    - Improvements to the [Support](/support) page
 
-- Some error codes now link out to relevant documentation ([example](/errors#8055))
+    - Some error codes now link out to relevant documentation ([example](/errors#8055))
 
-- Information about [benchmarking and the Benchpress package](/guides#benchmarking-and-the-benchpress-package)
+    - Information about [benchmarking and the Benchpress package](/guides#benchmarking-and-the-benchpress-package)
 
 - Copyediting and typo fixes across the documentation, including bugs reported by open-source contributors - thank you!
 
-**New API reference documentation**
+    **New API reference documentation**
 
-- [qiskit-ibm-runtime 0.29-0.31](/api/qiskit-ibm-runtime/release-notes)
-- [qiskit-ibm-transpiler 0.7](/api/qiskit-ibm-transpiler/release-notes)
+    - [qiskit-ibm-runtime 0.29-0.31](/api/qiskit-ibm-runtime/release-notes)
+    - [qiskit-ibm-transpiler 0.7](/api/qiskit-ibm-transpiler/release-notes)
 
-### User experience improvements
+    ### User experience improvements
 
-Updates to the infrastructure and design of the documentation include the following:
+    Updates to the infrastructure and design of the documentation include the following:
 
-- We fixed GitHub source code links for functions using decorators - thanks to the open-source contributor who opened an issue for this!
-- When you change the version in the left sidebar of the API reference docs, you arrive at the equivalent page in the new version. If the page does not exist in the new version, you land on the index page.
-- We improved the design and color of the warning banner for when you access outdated API pages to make it more obvious that newer docs are available. The banner persists as you scroll down the page.
-- Source code links and release notes have been added to the [Qiskit Transpiler Service client API documentation](/api/qiskit-ibm-transpiler).
-- Code blocks that write to a file now display the file path; see examples in this [Qiskit Serverless guide](/guides/serverless-first-program).
-- Tips to use the Qiskit Code Assistant now appear throughout the guides.
+    - We fixed GitHub source code links for functions using decorators - thanks to the open-source contributor who opened an issue for this!
+    - When you change the version in the left sidebar of the API reference docs, you arrive at the equivalent page in the new version. If the page does not exist in the new version, you land on the index page.
+    - We improved the design and color of the warning banner for when you access outdated API pages to make it more obvious that newer docs are available. The banner persists as you scroll down the page.
+    - Source code links and release notes have been added to the [Qiskit Transpiler Service client API documentation](/api/qiskit-ibm-transpiler).
+    - Code blocks that write to a file now display the file path; see examples in this [Qiskit Serverless guide](/guides/serverless-first-program).
+    - Tips to use the Qiskit Code Assistant now appear throughout the guides.
 
 *A huge thank you goes out to everyone in the open-source community who contributed and gave feedback!* Please [open an issue](https://github.com/Qiskit/documentation/issues/new/choose) if you find a bug, have a suggestion, or want to share your experience.
 
