--- a/docs/guides/fractional-gates.ipynb
+++ b/docs/guides/fractional-gates.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "```python\n",
     "service = QiskitRuntimeService()\n",
-    "backend = service.backend('ibm_torino', use_fractional_gates=True)\n",
+    "backend = service.backend('ibm_kyiv', use_fractional_gates=True)\n",
     "```\n",
     "\n",
     "This code example demonstrates how to use fractional gates in the context of a workflow that simulates the dynamics of an Ising chain using fractional gates. The circuit duration is then compared against a backend that does not use fractional gates.\n",
@@ -102,9 +102,9 @@
    "outputs": [],
    "source": [
     "service = QiskitRuntimeService()\n",
-    "backend_fractional = service.backend(\"ibm_torino\", use_fractional_gates=True)\n",
+    "backend_fractional = service.backend(\"ibm_kyiv\", use_fractional_gates=True)\n",
     "backend_conventional = service.backend(\n",
-    "    \"ibm_torino\", use_fractional_gates=False\n",
+    "    \"ibm_kyiv\", use_fractional_gates=False\n",
     ")\n",
     "\n",
     "pm_fractional = generate_preset_pass_manager(\n",
@@ -242,7 +242,7 @@
    "source": [
     "# Decomposition of an RX(θ) gate using the IBM Quantum QPU basis\n",
     "service = QiskitRuntimeService()\n",
-    "backend = service.backend(\"ibm_torino\")\n",
+    "backend = service.backend(\"ibm_kyiv\")\n",
     "optimization_level = 3\n",
     "pm = generate_preset_pass_manager(optimization_level, backend=backend)\n",
     "transpiled_circuit = pm.run(qc)\n",
@@ -301,7 +301,7 @@
    "source": [
     "# Decomposition of an RZZ(θ) gate using the IBM Quantum QPU basis\n",
     "service = QiskitRuntimeService()\n",
-    "backend = service.backend(\"ibm_torino\")\n",
+    "backend = service.backend(\"ibm_kyiv\")\n",
     "optimization_level = 3\n",
     "pm = generate_preset_pass_manager(optimization_level, backend=backend)\n",
     "transpiled_circuit = pm.run(qc)\n",
