--- a/docs/guides/fractional-gates.ipynb
+++ b/docs/guides/fractional-gates.ipynb
@@ -105,9 +105,7 @@
    "source": [
     "service = QiskitRuntimeService()\n",
     "backend_fractional = service.backend(\"ibm_kyiv\", use_fractional_gates=True)\n",
-    "backend_conventional = service.backend(\n",
-    "    \"ibm_kyiv\", use_fractional_gates=False\n",
-    ")\n",
+    "backend_conventional = service.backend(\"ibm_kyiv\", use_fractional_gates=False)\n",
     "\n",
     "pm_fractional = generate_preset_pass_manager(\n",
     "    optimization_level=3, backend=backend_fractional, scheduling_method=\"alap\"\n",
