--- a/docs/guides/transpile-rest-api.mdx
+++ b/docs/guides/transpile-rest-api.mdx
@@ -25,7 +25,7 @@ The steps in this topic describe how to transpile a given QASM circuit and obtai
 
 ## Query the Qiskit Transpiler Service
 
-Query the [Qiskit Transpiler Service REST API](https://cloud-transpiler.quantum-computing.ibm.com/docs) and provide your QASM string as input. See more details in the [API reference documentation](/api/qiskit-transpiler-service-rest).
+Query the Qiskit Transpiler Service REST API and provide your QASM string as input. See more details in the [API reference documentation](/api/qiskit-transpiler-service-rest).
 
 There are two ways to invoke the Qiskit Transpiler Service using REST API: with regular transpilation, and with AI-enhanced transpilation. The following demonstrates both ways to invoke the Qiskit Transpiler Service API.
 
