--- a/docs/guides/qiskit-transpiler-service.mdx
+++ b/docs/guides/qiskit-transpiler-service.mdx
@@ -122,5 +122,5 @@ Eprint = {arXiv:2405.13196},
 <Admonition type="tip" title="Recommendations">
     - Learn how to create [AI transpiler passes.](ai-transpiler-passes)
     - Learn [how to transpile circuits](https://learning.quantum.ibm.com/tutorial/submit-transpiled-circuits) as part of Qiskit Patterns workflows using Qiskit Runtime.
-    - Review the [`qiskit-ibm-transpiler` API documentation.](/api/qiskit-ibm-transpiler)
+    - Review the [Qiskit Transpiler Service Python client](/api/qiskit-ibm-transpiler) documentation.
 </Admonition>
