--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -166,35 +166,37 @@ Visit the newest content in the documentation!
 
 **Content additions and improvements**
 
-    - Added content to the [Execution modes](/guides/execution-modes) guides and improved explanatory content in the [Introduction to primitives](/guides/primitives) page
+- Guidance on how to [securely manage your API token](/guides/setup-channel#set-up-to-use-ibm-quantum-platform), as part of the guide to set up an IBM Quantum channel
 
-    - Clarified how the [Estimator primitive calculates error](/guides/primitive-input-output#how-the-estimator-calculates-error)
+- Revisions by Qunasys to the Qiskit Functions [QURI Chemistry](/guides/qunasys-quri-chemistry) guide 
 
-    - A new [FAQ](/faq) page
+- Updated code examples to fix a bug in [Get started with primitives](/guides/get-started-with-primitives)
 
-    - Improvements to the [Support](/support) page
-
-    - Some error codes now link out to relevant documentation ([example](/errors#8055))
-
-    - Information about [benchmarking and the Benchpress package](/guides#benchmarking-and-the-benchpress-package)
+- Updates to [Introduction to options](/guides/runtime-options-overview) to include the new [gen3-turbo](/guides/runtime-options-overview#experimental-option-note) options
 
 - Copyediting and typo fixes across the documentation, including bugs reported by open-source contributors - thank you!
 
-    **New API reference documentation**
+### New API reference documentation
 
-    - [qiskit-ibm-runtime 0.29-0.31](/api/qiskit-ibm-runtime/release-notes)
-    - [qiskit-ibm-transpiler 0.7](/api/qiskit-ibm-transpiler/release-notes)
+- [Qiskit SDK v1.3](/api/qiskit/release-notes)
+- [qiskit-ibm-runtime v0.32-0.34](/api/qiskit-ibm-runtime/release-notes)
+- [qiskit-ibm-transpiler v0.9](/api/qiskit-ibm-transpiler/release-notes)
+- Qiskit addons:
+  - [qiskit-addon-aqc-tensor](/api/qiskit-addon-aqc-tensor/release-notes)
+  - [qiskit-addon-cutting](/api/qiskit-addon-cutting/release-notes)
+  - [qiskit-addon-obp](/api/qiskit-addon-obp/release-notes)
+  - [qiskit-addon-mpf](/api/qiskit-addon-mpf/release-notes)
+  - [qiskit-addon-sqd](/api/qiskit-addon-sqd/release-notes)
+  - [qiskit-addon-utils](/api/qiskit-addon-utils/release-notes)
 
-    ### User experience improvements
+### User experience improvements
 
-    Updates to the infrastructure and design of the documentation include the following:
+Updates to the infrastructure and design of the documentation include the following:
 
-    - We fixed GitHub source code links for functions using decorators - thanks to the open-source contributor who opened an issue for this!
-    - When you change the version in the left sidebar of the API reference docs, you arrive at the equivalent page in the new version. If the page does not exist in the new version, you land on the index page.
-    - We improved the design and color of the warning banner for when you access outdated API pages to make it more obvious that newer docs are available. The banner persists as you scroll down the page.
-    - Source code links and release notes have been added to the [Qiskit Transpiler Service client API documentation](/api/qiskit-ibm-transpiler).
-    - Code blocks that write to a file now display the file path; see examples in this [Qiskit Serverless guide](/guides/serverless-first-program).
-    - Tips to use the Qiskit Code Assistant now appear throughout the guides.
+- The required versions of packages used in code examples are now listed at the top of each guide
+- Bug in menu view on mobile devices is now fixed
+- Search bar is now bigger for increased discoverability, and your search query is preserved after you close the search modal
+- All code examples have been updated to work with Qiskit SDK v1.3 and Qiskit Runtime v0.34
 
 *A huge thank you goes out to everyone in the open-source community who contributed and gave feedback!* Please [open an issue](https://github.com/Qiskit/documentation/issues/new/choose) if you find a bug, have a suggestion, or want to share your experience.
 
