--- a/docs/migration-guides/external-providers-primitives-v2.mdx
+++ b/docs/migration-guides/external-providers-primitives-v2.mdx
@@ -9,7 +9,7 @@ description: Migrate to the primitives interface in external providers
 ## Motivation and context
 
 The evolution of quantum algorithms and scaling of quantum processing units (QPUs) motivated the
-introduction of the Qiskit [primitives interface](https://docs.quantum.ibm.com/guides/primitives) to provide a higher-level abstraction for
+introduction of the Qiskit [primitives interface](/guides/primitives) to provide a higher-level abstraction for
 accessing QPUs. This interface is optimized for two core tasks in quantum algorithm development: expectation value estimation (Estimator) and
 circuit sampling (Sampler).
 
@@ -17,7 +17,7 @@ After a time of co-existence of the `backend.run` model and primitives model, wh
 evolved to the updated V2 primitives, the `backend.run` model was finally deprecated in favor of
 these newer interfaces to streamline quantum workload execution.
 
-The existing collection of migration guides allow users to [transition to the runtime provider](https://docs.quantum.ibm.com/migration-guides/qiskit-runtime) and
+The existing collection of migration guides allow users to [transition to the runtime provider](/migration-guides/qiskit-runtime) and
 [update their user code to the new primitives V2 interface](/migration-guides/v2-primitives) in time for the upcoming removal of `backend.run`.
 To complement that, this guide focuses on supporting external providers (both existing and upcoming)
 in the implementation their own flavor of the primitives V2 interface (Estimator or Sampler) to integrate seamlessly into the
