--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -180,7 +180,7 @@ Visit the newest content in the documentation!
 
 - [Qiskit SDK v1.3](/api/qiskit/release-notes)
 - [qiskit-ibm-runtime v0.32-0.34](/api/qiskit-ibm-runtime/release-notes)
-- [qiskit-ibm-transpiler v0.9](/api/qiskit-ibm-transpiler/release-notes)
+- [qiskit-ibm-transpiler v0.8-0.9](/api/qiskit-ibm-transpiler/release-notes)
 - Qiskit addons:
   - [qiskit-addon-aqc-tensor](/api/qiskit-addon-aqc-tensor/release-notes)
   - [qiskit-addon-cutting](/api/qiskit-addon-cutting/release-notes)
