--- a/docs/migration-guides/external-providers-primitives-v2.mdx
+++ b/docs/migration-guides/external-providers-primitives-v2.mdx
@@ -17,23 +17,23 @@ After a time of co-existence of the `backend.run` model and primitives model, wh
 evolved to the updated V2 primitives, the `backend.run` model was finally deprecated in favor of
 these newer interfaces to streamline quantum workload execution.
 
-The existing collection of migration guides allow users to [transition to the runtime provider](/migration-guides/qiskit-runtime) and
-[update their user code to the new primitives V2 interface](/migration-guides/v2-primitives) in time for the upcoming removal of `backend.run`.
-To complement that, this guide focuses on supporting external providers (both existing and upcoming)
-in the implementation their own flavor of the primitives V2 interface (Estimator or Sampler) to integrate seamlessly into the
+The existing collection of migration guides helps users [transition to the runtime provider](/migration-guides/qiskit-runtime) and
+[update their user code to the V2 primitives interface](/migration-guides/v2-primitives) in time for the upcoming removal of `backend.run`.
+To complement that, this guide supports external providers (both existing and upcoming)
+in implementing their own version of the primitives V2 interface (Estimator or Sampler) that integrates seamlessly into the
 standard Qiskit workflow.
 
 These implementations can be used to wrap any custom provider hardware access function
 (for example: `execute_workload(QPU)` or `resource.access()`), or local simulator,
-as long as the final inputs and outputs conform to the established contract from the primitive interfaces.
+as long as the final inputs and outputs conform to the established standards from the primitive interfaces.
 
 ## If your provider already implemented `backend.run`
 
-The Qiskit SDK offers ready-to-go wrappers for `backend.run` that can be easily adapted to a custom primitives workflow
-through subclassing, these are the [`BackendEstimatorV2`](/api/qiskit/qiskit.primitives.BackendEstimatorV2) and [`BackendSamplerV2`.](/api/qiskit/qiskit.primitives.BackendSamplerV2) The inputs
+The Qiskit SDK offers wrappers for `backend.run` that can be easily adapted to a custom primitives workflow
+through subclassing; these are the [`BackendEstimatorV2`](/api/qiskit/qiskit.primitives.BackendEstimatorV2) and [`BackendSamplerV2`.](/api/qiskit/qiskit.primitives.BackendSamplerV2) The inputs
 to the primitives should follow the Primitive Unified Bloc (PUB) syntax specified in the V2 primitives interface. See the [Overview of PUBs section](/guides/primitive-input-output#pubs) in the Primitive inputs and outputs guide for details.
 
-An advantage of this strategy is that the wrapper can handle the input/output manipulation, so knowledge of the PUB data
+An advantage of this strategy is that the wrapper can handle the input and output manipulation, so knowledge of the PUB data
 model is not required. However, this might result in a sub-optimal runtime, which could be refined through a fully
 custom primitives implementation.
 
@@ -81,13 +81,13 @@ class CustomEstimator(BackendEstimatorV2):
 ## If your provider didn't implement `backend.run` or you prefer a fully custom implementation
 
 If a new provider is developed that doesn't conform to the legacy `backend.run` interface, the pre-packaged
-wrapper may not be the most optimal route for implementing the primtives. Instead, you should implement a particular
-instance of the abstract base primitive interfaces ([BaseEstimatorV2](/api/qiskit/qiskit.primitives.BaseEstimatorV2) or [BaseSamplerV2](/api/qiskit/qiskit.primitives.BaseSamplerV2)). This route requires an
-understanding of the PUB data model for input/output handling.
+wrapper might not be the optimal route for implementing the primtives. Instead, you should implement a particular
+instance of the abstract base primitive interfaces ([BaseEstimatorV2](/api/qiskit/qiskit.primitives.BaseEstimatorV2) or [BaseSamplerV2](/api/qiskit/qiskit.primitives.BaseSamplerV2)). This process requires an
+understanding of the PUB data model for input and output handling.
 
 The following snippet shows a minimal example of an implementation of a custom Sampler primitive following this strategy.
 This example has been extracted and generalized from the [`StatevectorSampler`](/api/qiskit/qiskit.primitives.StatevectorSampler) implementation. It has been simplified
-for readability purposes. The full original implementation can be found in the [`StatevectorSampler` source code.](https://github.com/Qiskit/qiskit/blob/stable/1.3/qiskit/primitives/statevector_sampler.py)
+for readability. The full original implementation can be found in the [`StatevectorSampler` source code.](https://github.com/Qiskit/qiskit/blob/stable/1.3/qiskit/primitives/statevector_sampler.py)
 
 ``` python
 from qiskit.primitives.base import BaseSamplerV2
@@ -150,9 +150,9 @@ class CustomStatevectorSampler(BaseSamplerV2):
         )
 ```
 
-The mechanics to implement a custom Estimator are analogous to the Sampler, but may require a different pre/post-processing
-step in the `run`  method to extract expectation values from samples. Similarly to the Sampler
-example, this snippet has been modified and simplified for generality and readability purposes.
+The mechanics to implement a custom Estimator are analogous to the Sampler, but might require a different pre or post-processing
+step in the `run`  method to extract expectation values from samples. Similar to the Sampler
+example, this snippet has been modified and simplified for generality and readability.
 The full original implementation can be found in the [`StatevectorEstimator` source code.](https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/primitives/statevector_estimator.py#L31-L174)
 
 ``` python
