--- a/docs/migration-guides/external-providers-primitives-v2.mdx
+++ b/docs/migration-guides/external-providers-primitives-v2.mdx
@@ -4,7 +4,7 @@ description: Migrate to the primitives interface in external providers
 
 ---
 
-# Migrate provider interfaces from backend.run to primitives
+# Migrate provider interfaces from `backend.run` to primitives
 
 ## Motivation and context
 
