--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -8,7 +8,7 @@ description: The latest updates from Qiskit and IBM Quantum, including the lates
 *Last updated 17 December 2024*
 {/* remember to update the date in the previous line each time this page is updated!!! */}
 
-Keep up with the latest and greatest from Qiskit and IBM Quantum&trade;! Gathered here are the the most recent Qiskit package release summaries, documentation updates, blogs, community events, and more.
+Keep up with the latest and greatest from Qiskit and IBM Quantum&trade;! Gathered here are the most recent Qiskit package release summaries, documentation updates, blogs, community events, and more.
 
 ## Latest release summaries
 
