Ensure that the two source listings are equivalent

--- a/docs/guides/serverless-template-hamiltonian-simulation.ipynb
+++ b/docs/guides/serverless-template-hamiltonian-simulation.ipynb
@@ -1351,16 +1351,20 @@
      "slide_type": ""
     },
     "tags": [
-     "version-info"
+     "id-full-source"
     ]
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ./source_files/template_hamiltonian_simulation_full.py\n"
+     ]
+    }
+   ],
    "source": [
-    "<details>\n",
-    "<summary><b>Full program source code</b></summary>\n",
-    "\n",
-    "Here is the entire source of `./source_files/template_hamiltonian_simulation.py` as one code block.\n",
-    "\n",
-    "```python\n",
+    "%%writefile ./source_files/template_hamiltonian_simulation_full.py\n",
     "\n",
     "from qiskit import QuantumCircuit\n",
     "from qiskit_serverless import get_arguments, save_result\n",
@@ -1436,7 +1440,7 @@
     "        f\"Invalid stopping fidelity: {aqc_stopping_fidelity}.  It must be a positive float no greater than 1.\"\n",
     "    )\n",
     "\n",
-    "output = {\"metadata\": arguments}\n",
+    "output = {}\n",
     "\n",
     "import os\n",
     "os.environ[\"NUMBA_CACHE_DIR\"] = \"/data\"\n",
@@ -1599,8 +1603,28 @@
     "print(\"Hardware expectation values\", hw_expvals)\n",
     "output[\"hw_expvals\"] = hw_expvals[0]\n",
     "\n",
-    "save_result(output)\n",
-    "```\n",
+    "save_result(output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": [
+    "<details>\n",
+    "<summary><b>Full program source code</b></summary>\n",
+    "\n",
+    "Here is the entire source of `./source_files/template_hamiltonian_simulation.py` as one code block.\n",
+    "\n",
+    "<CodeCellPlaceholder tag=\"id-full-source\" />\n",
+    "\n",
     "</details>"
    ]
   },
@@ -1619,8 +1643,12 @@
    },
    "outputs": [],
    "source": [
-    "# This cell is hidden from users, it just deletes the working folder we created\n",
+    "# This cell is hidden from users.  It verifies both source listings are identical then deletes the working folder we created\n",
     "import shutil\n",
+    "\n",
+    "with open(\"./source_files/template_hamiltonian_simulation.py\") as f1:\n",
+    "    with open(\"./source_files/template_hamiltonian_simulation_full.py\") as f2:\n",
+    "        assert f1.read() == f2.read()\n",
     "\n",
     "shutil.rmtree(\"./source_files/\")"
    ]
